--- a/ccp/app/page/templates/index.html
+++ b/ccp/app/page/templates/index.html
@@ -13,8 +13,8 @@
   <header class="cabecalho">
     <img class="cabecalho-imagem" src="../static/ccp.svg" alt="ccp">
     <nav class="cabecalho-menu">
-      <a class="cabecalho-menu-item" href="{{ ip_address }}:8501">Staight-Through</a>
-      <a class="cabecalho-menu-item" href="{{ ip_address }}:8502">Back-To-Back</a>
+      <a class="cabecalho-menu-item" href="http://{{ ip_address }}:8501">Staight-Through</a>
+      <a class="cabecalho-menu-item" href="http://{{ ip_address }}:8502">Back-To-Back</a>
     </nav>
   </header>
 
