--- a/ccp/app/page/templates/index.html
+++ b/ccp/app/page/templates/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="ccp">
   <title>ccp</title>
   <link rel="stylesheet" type="text/css" href="../static/style.css">
+  <link rel="icon" href="../static/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         <h2 class="conteudo-principal-escrito-subtitulo">Ferramenta para o cálculo de performance de compressores centrífugos</h2>
         <h1></h1>
         <p class="conteudo-secundario-paragrafo">Essa aplicação implementa o cálculo para o acompanhamento de testes de performance em fábrica conforme ASME PTC 10.</p>
-        <p class="conteudo-secundario-paragrafo">As equações de estado utilizadas são as do REFPROP e a ferramenta leva em consideração o vazamento no pistação de balanceamento e division wall.</p>
+        <p class="conteudo-secundario-paragrafo">As equações de estado utilizadas são as do REFPROP e a ferramenta leva em consideração o vazamento no pistão de balanceamento e division wall.</p>
         <p class="conteudo-secundario-paragrafo">Acessar as opções na barra de navegação acima (Straight-Through ou Back-To-Back).</p>
         <p class="conteudo-secundario-paragrafo">Em caso de dúvidas, sugestões ou report de bugs, abrir um issue no repositório clicando no botão abaixo:</p>
         <button class="conteudo-principal-escrito-botao" onclick="location.href='https://codigo.petrobras.com.br/equipamentos-dinamicos/ccp/-/issues/new'">Criar issue</button>
