--- a/ccp/app/page/static/style.css
+++ b/ccp/app/page/static/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
+  margin: 1px;
+  padding: 1px;
   box-sizing: border-box;
   text-decoration: none;
 }
