--- a/ccp/app/page/static/style.css
+++ b/ccp/app/page/static/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap');
-
 * {
   margin: 1px;
   padding: 1px;
@@ -30,7 +28,7 @@ body {
 }
 
 .cabecalho-menu-item {
-  font-family: 'Sarala', sans-serif;
+  font-family: 'Fira Code', monospace;
   color: #2c3e50;
   font-weight: 400;
   font-size: 28px
@@ -57,7 +55,7 @@ body {
 .conteudo-principal-escrito-titulo {
   font-family: 'Fira Code', monospace;
   font-weight: 400;
-  font-size: 64px;
+  font-size: 40px;
   color: #2c3e50;
 }
 
@@ -75,7 +73,7 @@ body {
   border: none;
   box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  font-family: 'Sarala', sans-serif;
+  font-family: 'Fira Code', monospace;
   font-weight: 400;
   font-size: 24px;
   color: #ffffff;
@@ -109,7 +107,7 @@ body {
 }
 
 .conteudo-secundario-paragrafo {
-  font-family: 'Sarala', sans-serif;
+  font-family: 'Fira Code', monospace;
   font-weight: 300;
   font-size: 18px;
   color: #2c3e50;
